tests/golden/snapshots/golden__golden_battle__基础战斗_战士攻击哥布林.snap
---
source: tests/golden/golden_battle.rs
assertion_line: 102
expression: record
---
entries:
  - DamageApplied:
      target: 4294967294
      target_name: 哥布林
      target_faction: Enemy
      attacker: 4294967295
      attacker_name: 战士
      attacker_faction: Player
      amount: 8
      is_skill: false
      terrain_label: 草
      target_coord:
        - 0
        - 0
turn_number: 0
